--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gym"
         tools:targetApi="31">
+        <activity
+            android:name=".seleccionGrupoMuscular"
+            android:exported="false" />
         <activity
             android:name=".Registrarse"
             android:exported="false" />
@@ -30,4 +33,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
